MDEV-37732: TPROC-H, Query 21 is much slower in 11.4 than in 10.11

The problem was Duplicate_weedout_picker::check_qep(). It computes
"outer fanout" - number of record combinations left after the strategy
removes the subquery's duplicates. The logic was incorrect. For example:

  select * from t1 where t1.col1 in (select col2 from t2 where corr_cond)

  and the join order of
  t2, full scan rows=1M
  t1, ref access on t1.col1=t2.col2, rows=10

it would conclude that "outer fanout" is 10.

Rewrote the "outer fanout" computation logic to use two approaches:

1. Pre-compute subquery's output cardinality, then check how many
   duplicate rows are expected in its output. This gives "subquery
   fanout" which we can use as expected number of duplicates.

2. Given a join prefix of inner and outer tables, compute outer tables'
   fanout by ignoring all inner tables.
   If access to an outer table depends on an inner table, use outer
   table's "found records".

Both approaches can give poor estimates, so we pick the best one.

The fix is controlled by @@new_mode='FIX_SEMIJOIN_DUPS_WEEDOUT_CHECK'
and is OFF by default in this patch.