sql/opt_group_by_cardinality.cc
@@ -30,6 +30,10 @@
 static
 double estimate_table_group_cardinality(JOIN *join, Item ***group_list,
                                         Item* const *end);
+static
+double estimate_item_list_cardinality(JOIN *join,
+                                      Dynamic_array<Item*> &group_cols,
+                                      double join_output_card);
 
 inline bool has_one_bit_set(table_map val)
 {
@@ -51,6 +55,41 @@ int cmp_items_by_used_tables(const void *a_val, const void *b_val)
   return v1 > v2 ? 1 : (v1 < v2 ? -1 : 0);
 }
 
+
+/*
+  Estimate how many distinct rows the select inside subq_pred would produce
+
+  @param  join              Parent join (subq_pred is a semi-join merged into
+                            this join)
+  @param  subq_pred         The subquery
+  @param  ncols             Number of elements in subq_pred's select list
+  @param  subq_output_size  Subquery output size, including duplicates.
+
+  @return
+    Number of distinct rows in subquery's output.
+*/
+
+double estimate_distinct_cardinality(JOIN *join, TABLE_LIST *sj_nest,
+                                     uint ncols, double subq_output_size)
+{
+  Dynamic_array<Item*> group_cols(join->thd->mem_root);
+
+  Item **item;
+  List_iterator<Item_ptr> it(sj_nest->sj_inner_expr_list);
+
+  while ((item = it++))
+  {
+    table_map map= (*item)->used_tables();
+    if ((map & PSEUDO_TABLE_BITS) || !has_one_bit_set(map))
+    {
+      /* Can't estimate */
+      return subq_output_size;
+    }
+    group_cols.append(*item);
+  }
+  DBUG_ASSERT(group_cols.size());
+  return estimate_item_list_cardinality(join, group_cols, subq_output_size);
+}
 
 /*
   @brief
@@ -91,10 +130,6 @@ double estimate_post_group_cardinality(JOIN *join, double join_output_card)
   Dynamic_array<Item*> group_cols(join->thd->mem_root);
   ORDER *cur_group;
 
-  Json_writer_object wrapper(join->thd);
-  Json_writer_object trace(join->thd, "materialized_output_cardinality");
-  trace.add("join_output_cardinality", join_output_card);
-
   /*
     Walk the GROUP BY list and put items into group_cols array. Array is
     easier to work with: we will sort it and then produce estimates for
@@ -113,7 +148,17 @@ double estimate_post_group_cardinality(JOIN *join, double join_output_card)
     group_cols.append(item);
   }
   DBUG_ASSERT(group_cols.size());
+  return estimate_item_list_cardinality(join, group_cols, join_output_card);
+}
 
+
+static
+double estimate_item_list_cardinality(JOIN *join, Dynamic_array<Item*> &group_cols,
+                                      double join_output_card)
+{
+  Json_writer_object wrapper(join->thd);
+  Json_writer_object trace(join->thd, "materialized_output_cardinality");
+  trace.add("join_output_cardinality", join_output_card);
   group_cols.sort(cmp_items_by_used_tables);
 
   double new_card= 1.0;
@@ -214,19 +259,21 @@ double estimate_table_group_cardinality(JOIN *join, Item ***group_list,
 
   table_map table_bit= (**group_list)->used_tables();
   /*
-    join->map2table is not set yet, so find our table in JOIN_TABs.
+    join->map2table is not set yet, so find the table in leaf_tables list
   */
-  for (JOIN_TAB *tab= join->join_tab;
-       tab < join->join_tab + join->top_join_tab_count;
-       tab++)
+  List_iterator<TABLE_LIST> li(join->select_lex->leaf_tables);
+  TABLE_LIST *tbl;
+  while ((tbl= li++))
   {
-    if (tab->table->map == table_bit)
+    if (tbl->table->map == table_bit)
     {
-      table= tab->table;
-      table_records_after_where= rows2double(tab->found_records);
+      table= tbl->table;
+      table_records_after_where= rows2double(tbl->table->reginfo.
+                                             join_tab->found_records);
       break;
     }
   }
+
   DBUG_ASSERT(table);
 
   Json_writer_object trace_obj(join->thd);
